--- a/styles/sections/_footer.scss
+++ b/styles/sections/_footer.scss
@@ -1,6 +1,10 @@
 .section-footer {
   padding: 1.2rem 0 5rem;
 
+  @media (min-width: 750px) {
+    padding: 1.2rem 0;
+  }
+
   &__socials {
     margin-bottom: 1rem;
   }
