--- a/styles/sections/_works.scss
+++ b/styles/sections/_works.scss
@@ -1,6 +1,10 @@
 .section-works {
   padding: 1.2rem 0;
 
+  @media (min-width: 750px) {
+    padding: 0 0 4.75;
+  }
+
   .container {
     display: flex;
     flex-direction: column;
